@@ -97,6 +97,7 @@ gerritclient =
     project_delete=gerritclient.commands.project:ProjectDelete
     project_description_set=gerritclient.commands.project:ProjectDescriptionSet
     project_description_show=gerritclient.commands.project:ProjectDescriptionShow
+    project_gc-run=gerritclient.commands.project:ProjectGCRun
     project_head_show=gerritclient.commands.project:ProjectHeadShow
     project_head_set=gerritclient.commands.project:ProjectHeadSet
     project_list=gerritclient.commands.project:ProjectList
